--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,4 @@
 [package]
-name = "chat"
+name = "rustchat"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-tokio = { version = "1", features = ["full"] }
